--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
       - SPRING_DATASOURCE_USERNAME=ewm
       - SPRING_DATASOURCE_PASSWORD=ewm
-      - EWM_STAT_URL=http://stats-server:9090
+      - EWM-STAT_URL=http://stats-server:9090
 
   ewm-db:
     image: postgres:14-alpine
