--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 logging.level.ru.practicum.ewmmain=debug
 ewm-stat.url=http://localhost:9090
+spring.jpa.properties.hibernate.metadata_builder_contributor=ru.practicum.ewmmain.repository.SqlFunctionsMetadataBuilderContributor
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
