--- a/stat/src/main/resources/application.properties
+++ b/stat/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-stat
 spring.datasource.username=ewm
 spring.datasource.password=ewm
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:ewm-stat
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm-stat
+spring.datasource.username=test
+spring.datasource.password=test
